--- a/components/common/Pills/Pills.scss
+++ b/components/common/Pills/Pills.scss
@@ -11,10 +11,10 @@
     padding: 0 8px 8px 0;
   }
 
-  &__anchor {
-    padding: 0;
-    margin: 0 8px 8px 0;
-  }
+  //&__anchor {
+  //  padding: 0;
+  //  margin: 0 8px 8px 0;
+  //}
 
   &__button {
     height: 32px;
@@ -25,40 +25,41 @@
     color: var(--dark-grey);
     background-color: var(--song-bg-color);
     transition: color 0.25s;
+    cursor: pointer;
 
     &:hover {
       color: var(--accent-color);
     }
 
-    &__active {
-      color: var(--beige);
-      background-color: var(--dark);
-
-      &:hover {
-        color: var(--beige);
-      }
-    }
+    //&__active {
+    //  color: var(--beige);
+    //  background-color: var(--dark);
+    //
+    //  &:hover {
+    //    color: var(--beige);
+    //  }
+    //}
   }
 
-  &__author {
-    padding: 8px;
-    border-radius: 6px;
-    border: solid 1px var(--grey);
-    color: var(--dark-grey);
-    background-color: var(--song-bg-color);
-    transition: color 0.25s;
-
-    &:hover {
-      color: var(--accent-color);
-    }
-
-    &__active {
-      color: var(--beige);
-      background-color: var(--dark);
-
-      &:hover {
-        color: var(--beige);
-      }
-    }
-  }
+  //&__author {
+  //  padding: 8px;
+  //  border-radius: 6px;
+  //  border: solid 1px var(--grey);
+  //  color: var(--dark-grey);
+  //  background-color: var(--song-bg-color);
+  //  transition: color 0.25s;
+  //
+  //  &:hover {
+  //    color: var(--accent-color);
+  //  }
+  //
+  //  &__active {
+  //    color: var(--beige);
+  //    background-color: var(--dark);
+  //
+  //    &:hover {
+  //      color: var(--beige);
+  //    }
+  //  }
+  //}
 }
