--- a/components/common/BookDescription/BookDescription.scss
+++ b/components/common/BookDescription/BookDescription.scss
@@ -1,21 +1,8 @@
-.BookThumbnail {
+.BookDescription {
   &__content {
     display: flex;
     flex-direction: row;
     align-items: center;
-  }
-
-  &__box {
-    border-radius: 8px;
-    overflow: hidden;
-    height: 52px;
-    width: 52px;
-    min-width: 52px;
-  }
-
-  &__image {
-    height: 100%;
-    width: 100%;
   }
 
   &__info {
