--- a/styles/index.scss
+++ b/styles/index.scss
@@ -1,6 +1,7 @@
-//@import 'components/button';
 //@import 'components/collapse';
-//@import 'components/modal';
+@use 'components/buttons';
+@use 'components/modal';
+
 @use 'common';
 @use 'icomoon';
 @use 'mixins';
