--- a/styles/components/modal.scss
+++ b/styles/components/modal.scss
@@ -10,11 +10,10 @@
   &__container {
     &.react-responsive-modal-modal {
       min-height: calc(100% - 40px);
-      max-width: 90%;
-      min-width: 80%;
+      max-width: 400px;
+      width: 90%;
 
-      margin-top: 30px;
-      margin-bottom: 30px;
+      margin: 30px 0;
       border-radius: 24px;
       padding: var(--side-padding);
       background-color: var(--song-bg-color) !important;
@@ -23,6 +22,7 @@
         max-width: 500px;
         min-width: 500px;
         min-height: unset;
+        margin: 30px 20px;
       }
     }
   }
