Song text layout

--- a/components/song/SongHeader.scss
+++ b/components/song/SongHeader.scss
@@ -36,4 +36,12 @@
     font-weight: 300;
     margin-bottom: 10px;
   }
+
+  &__note {
+    font-weight: 600;
+  }
+
+  &__term {
+    font-weight: 400;
+  }
 }
