--- a/styles/variables.scss
+++ b/styles/variables.scss
@@ -21,13 +21,14 @@ $bp576: 576;
 
   /**/
   --content-max-width: 568px;
+  --extra-max-width: 900px;
   --header-height: 52px;
   --footer-height: 72px;
   --page-max-width: 768px;
   --side-padding: 20px;
 
   /**/
-  --transition-duration-m: 0.4s;
+  --transition-duration: 0.25s;
 
   /**/
   --bp-992: 992px;
