--- a/app/[bookId]/[slug]/SongPage.scss
+++ b/app/[bookId]/[slug]/SongPage.scss
@@ -1,9 +1,16 @@
 .SongPage {
+  &__container {
+    margin: 0 auto;
+    max-width: var(--extra-max-width);
+  }
+
   &__content {
     padding-bottom: 64px;
   }
 
   &__header {
+    margin: 0 auto;
+    max-width: var(--content-max-width);
     padding: var(--side-padding) var(--side-padding) 12px;
   }
 
@@ -31,32 +38,32 @@
     justify-content: flex-end;
   }
 
-  &__main {
-    width: 100%;
-    background-color: var(--song-bg-color);
-    border-radius: 24px;
-    box-shadow: 0px 4px 20px 0px rgba(56, 55, 142, 0.15);
-    padding: var(--side-padding) var(--side-padding) 8px;
-    margin-bottom: calc(1.5 * var(--side-padding));
-  }
+  //&__main {
+  //  width: 100%;
+  //  background-color: var(--song-bg-color);
+  //  border-radius: 24px;
+  //  box-shadow: 0px 4px 20px 0px rgba(56, 55, 142, 0.15);
+  //  padding: var(--side-padding) var(--side-padding) 8px;
+  //  margin-bottom: calc(1.5 * var(--side-padding));
+  //}
 
-  &__toggle {
-    margin-top: -4px;
-  }
+  //&__toggle {
+  //  margin-top: -4px;
+  //}
 
   &__show {
     font-size: 14px;
   }
 
-  &__verses {
-    list-style-type: none;
-    margin: 16px 0;
-    padding: 0;
-    /*
-    opacity: 0;
-    animation: fadeInStep 0.35s forwards;
-    */
-  }
+  //&__verses {
+  //  list-style-type: none;
+  //  margin: 16px 0;
+  //  padding: 0;
+  //  /*
+  //  opacity: 0;
+  //  animation: fadeInStep 0.35s forwards;
+  //  */
+  //}
 
   &__extra {
     padding: 0 var(--side-padding);
