--- a/components/song/AudioList/AudioList.scss
+++ b/components/song/AudioList/AudioList.scss
@@ -1,3 +1,11 @@
 .AudioList {
+  margin: 0 auto;
+  padding: 0 var(--side-padding);
+  max-width: var(--content-max-width);
 
+  &__list {
+    list-style-type: none;
+    margin: 16px 0;
+    padding: 0;
+  }
 }
