--- a/components/common/ThreeModeSwitch/ThreeModeSwitch.scss
+++ b/components/common/ThreeModeSwitch/ThreeModeSwitch.scss
@@ -4,7 +4,7 @@
   font-family: system-ui, -apple-system, 'Segoe UI', Roboto, 'Helvetica Neue',
     Arial;
 
-  &[mode="1"] {
+  &[data-mode="1"] {
     .fill {
       left: 4px;
       width: calc(50% - 8px);
@@ -18,7 +18,7 @@
     }
   }
 
-  &[mode="2"] {
+  &[data-mode="2"] {
     .fill {
       left: calc(50% + 4px);
       width: calc(50% - 8px);
@@ -32,7 +32,7 @@
     }
   }
 
-  &[mode="3"] {
+  &[data-mode="3"] {
     .fill {
       left: 4px;
       width: calc(100% - 8px);
