Rendering the full list of books

--- a/components/common/Pills/Pills.scss
+++ b/components/common/Pills/Pills.scss
@@ -1,7 +1,7 @@
 .Pills {
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-between;
+  //justify-content: space-between;
   margin: 0 -8px 0 0;
   padding: 0;
   list-style-type: none;
