Audio as remote shared resources

--- a/components/contents/ContentItem.scss
+++ b/components/contents/ContentItem.scss
@@ -16,6 +16,11 @@
     color: var(--title-color);
   }
 
+  &__title--normal {
+    font-weight: normal;
+    color: var(--dark-grey);
+  }
+
   &__page {
     display: inline-block;
     font-weight: 400;
