--- a/components/song/SongText/SongText.scss
+++ b/components/song/SongText/SongText.scss
@@ -16,13 +16,13 @@
   }
 
   &__toggle {
-    margin-top: -4px;
+    margin: -4px 0 16px 0;
     max-width: var(--content-max-width);
   }
 
   &__list {
     list-style-type: none;
-    margin: 16px 0;
+    margin: 0 0 16px 0;
     padding: 0;
   }
 }
