Verse comp fix. Content list style fix

--- a/components/contents/ContentItem.scss
+++ b/components/contents/ContentItem.scss
@@ -22,7 +22,7 @@
   }
 
   &__page {
-    display: inline-block;
+    display: inline;
     font-weight: 400;
     color: var(--grey);
     margin-left: 16px;
