--- a/components/song/Verse/VerseTranslation.scss
+++ b/components/song/Verse/VerseTranslation.scss
@@ -18,6 +18,7 @@
       line-height: 2;
       font-size: clamp(18px, 3.14cqw, 22px);
       font-weight: 400;
+      color: var(--dark);
     }
   }
 
